# knowhere

./: AGENTS.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  install.sh  mkdocs.yml  requirements.md
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml  release.yml
Casks/: knowhere.rb
Formula/: knowhere.rb
docs/: architecture.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/gui/: features.md  overview.md
docs/sql/: functions.md  queries.md
docs/tui/: keybindings.md  overview.md
gui/: package-lock.json  package.json
gui/src/: App.tsx  index.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: commands.rs  lib.rs  main.rs
gui/src/components/Editor/: SqlEditor.tsx
gui/src/components/Results/: ResultsTable.tsx
gui/src/components/Sidebar/: Sidebar.tsx
gui/src/components/StatusBar/: StatusBar.tsx
gui/src/hooks/: useTheme.ts
gui/src/lib/: api.ts  types.ts
samples/: departments.json  employees_nested.json  orders.csv  products.csv  products.json  users.csv
src/: cli.rs  lib.rs  main.rs
src/datafusion/: context.rs  conversion.rs  error.rs  loader.rs  mod.rs  sqlite.rs
src/sql/: ast.rs  executor.rs  lexer.rs  mod.rs  parser.rs  planner.rs
src/storage/: csv.rs  mod.rs  parquet.rs  table.rs
src/tui/: app.rs  input.rs  mod.rs  ui.rs
tests/: cte_tests.rs  format_tests.rs  integration_tests.rs  subquery_tests.rs  window_tests.rs
