[package]
name = "knowhere"
version = "0.1.2"
edition = "2021"
description = "A lightweight SQL engine for querying CSV and Parquet files via an interactive TUI"
license = "MIT"
authors = ["Varun"]
repository = "https://github.com/saivarunk/knowhere"
homepage = "https://github.com/saivarunk/knowhere"
readme = "README.md"
keywords = ["sql", "csv", "parquet", "iceberg", "tui"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "knowhere"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
thiserror = "1.0"

# DataFusion and Arrow ecosystem
datafusion = "48"
datafusion-datasource = "48"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
arrow = "55"
arrow-array = "55"
arrow-schema = "55"
parquet = "55"
object_store = "0.12"

# Delta Lake support
deltalake = { version = "0.27", features = ["datafusion"] }

# Iceberg support
iceberg = "0.7"
iceberg-datafusion = "0.7"

# SQLite support
rusqlite = "0.31"

# Date/time handling
chrono = "0.4"

# Async support
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
