[package]
name = "knowhere-gui"
version = "0.1.0"
description = "Knowhere GUI - SQL engine for querying CSV, Parquet, Delta Lake files"
authors = ["Varun"]
license = "MIT"
repository = "https://github.com/saivarunk/knowhere"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "knowhere_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Link to knowhere library
knowhere = { path = "../.." }

# Async runtime (needed for DataFusion)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
